--- a/pagetransformer/build.gradle
+++ b/pagetransformer/build.gradle
@@ -6,6 +6,21 @@ apply plugin: 'maven'
 
 group = 'com.github.vejei'
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
 android {
     compileSdkVersion 29
     buildToolsVersion "30.0.0"
