--- a/pagetransformer/build.gradle
+++ b/pagetransformer/build.gradle
@@ -1,25 +1,10 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
-apply from: 'bintray.gradle'
-apply plugin: 'maven'
+//apply from: 'bintray.gradle'
 
 group = 'com.github.vejei'
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives sourcesJar
-    archives javadocJar
-}
 
 android {
     compileSdkVersion 29
@@ -29,7 +14,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
-        versionName project.ext.versionName
+//        versionName project.ext.versionName
+        versionName "1.0.0-alpha"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
